--- a/index.html
+++ b/index.html
@@ -22,21 +22,77 @@
     </section>
 
 
-    <section class="gallery">
-        <div class="gallery-header">
+    <div class="meme-editor">
+
+        <div class="canvas-container flex-1 flex justify-center">
+            <canvas id="my-canvas" height="350" width="350" onmousedown="mousedown(event)" onmousemove="mousemove(event)" onmouseup="mouseup(event)" style="border: 1px solid black;"></canvas>
+        </div>
+        <div class="editor-control flex  column flex-1">
+            <input class="text-to-draw " onkeyup="reRenderMemeIMG(this)" " placeholder="text to add " type="text ">
+            <div class="text-controle-line-1 flex row justify-center ">
+                <button  class="switch-line-btn controle-btn " onclick="switchLine() "><img src="./images/line_down.png " alt=" "><img src="./images/line_up.png " alt=" "></button>
+                <button   class="add-line-btn controle-btn "onclick="addLine() ">+</button>
+                <button  class="delete-line-btn controle-btn " onmousedown="deleteCurrLine( ) "><img src="./images/delete.png " alt=" "></button>
+            </div>
+            <div class="text-controle-line-2 flex row justify-around ">
+                <button class="btn controle-btn " onmousedown="moveLine( 'up') "><img src="./images/arrow_up.png " alt=" "></button>
+                <button class="btn controle-btn " onmousedown="moveLine( 'down') "><img src="./images/arrow_down.png " alt=" "></button>
+                <button class="btn controle-btn " onmousedown="moveLine( 'left') "><img src="./images/arrow_left.png " alt=" "></button>
+                <button class="btn controle-btn " onmousedown="moveLine( 'right') "><img src="./images/arrow_right.png " alt=" "></button>
+            </div>
+            <div class="text-controle-line-2 flex row justify-around ">
+
+                <button  class="btn controle-btn " onclick="switchAlign( 'start') "><img src="./images/align_left.png " alt=" "></button>
+                <button  class="btn controle-btn " onclick="switchAlign( 'center') "><img src="./images/align_center.png " alt=" "></button>
+                <button  class="btn controle-btn " onclick="switchAlign( 'end') "><img src="./images/align_right.png " alt=" " ></button>
+ 
+                <button class="btn controle-btn " onmousedown="fontSizeChange( -2) " style="font-size: larger; ">A-</button>
+                <button class="btn controle-btn " onmousedown="fontSizeChange( 2) " style="font-size: larger; ">A+</button>
+            </div>
+                <div class="font-and-colors ">
+                    <select name="fontFamily "  class="fontFamily " id="fontFamily " onchange="onFontChange(this.value) ">
+                    <option name="fontFamily " value="Impact ">Impact</option>
+                    <option name="fontFamily " value="Comic Sans MS ">Comic Sans</option>
+                    <option name="fontFamily " value="Arial ">Arial</option>
+                    <option name="fontFamily " value="Cursive ">Cursive</option>
+                </select>
+                <input type="color "  class="color-input " id="favcolor "  name="favcolor ">
+        </div>
+    </div>
+    <div class="shapes ">
+        <!-- <button class="btn controle-btn " onclick="setCurrShape( 'triangle') ">Triangle</button>
+                <button class="btn controle-btn " onclick="setCurrShape( 'rect') ">Rect</button>
+                <button class="btn controle-btn " onclick="setCurrShape( 'line') ">Line</button>
+                <button class="btn controle-btn " onclick="setCurrShape( 'fan') ">fan</button>
+                <button class="btn controle-btn " onclick="setCurrShape( 'dna') ">DNA</button>
+                <button class="btn controle-btn " onclick="setCurrShape( 'circle') ">circle</button> -->
+
+        <!-- <input class="btn controle-btn " type="color " onchange="setlines(this.value) "> -->
+        <!-- <button class="btn controle-btn " onclick="clearCanvas() ">Clear</button> -->
+
+        <!-- <a href="# " onclick="drawImg(this) " download=" ">img upload</a>
+            <a href="# " onclick="downloadCanvas(this) " download=" ">Download</a> -->
+
+    </div>
+
+
+    </div>
+
+    <section class="gallery ">
+        <div class="gallery-header ">
             <div class="secondary-header flex justify-around ">
-                <input onchange="onSearchWordChanged(this)" type="list" list="searchwords" name="searchwords" method="get" class="searchwords-search-bar">
-                <datalist id="searchwords">
-            <option value="excited"></option>
-            <option value="evil"></option>
-            <option value="funny"></option>
-            <option value="kittens"></option>
-            <option value="love"></option>
-            <option value="trump"></option>
-            <option value="dogs"></option>
-            <option value="wow"></option>
+                <input onchange="onSearchWordChanged(this) " type="list " list="searchwords " name="searchwords " method="get " class="searchwords-search-bar ">
+                <datalist id="searchwords ">
+            <option value="excited "></option>
+            <option value="evil "></option>
+            <option value="funny "></option>
+            <option value="kittens "></option>
+            <option value="love "></option>
+            <option value="trump "></option>
+            <option value="dogs "></option>
+            <option value="wow "></option>
         </datalist>
-                <div class="search-words-dsiplay"></div>
+                <div class="search-words-dsiplay "></div>
             </div>
 
 
@@ -47,41 +103,6 @@
 
 
 
-    <div class="meme-editor">
-
-        <div class="canvas-container flex-1">
-            <canvas id="my-canvas" height="900" width="500" onmousedown="mousedown(event)" onmousemove="mousemove(event)" onmouseup="mouseup(event)" style="border: 1px solid black;"></canvas>
-        </div>
-        <div class="editor-control flex-1">
-            <input class="btn" type="color" onchange="setColor(this.value)">
-            <input class="btn" type="color" onchange="setlines(this.value)">
-            <button class="btn" onclick="setCurrShape('triangle')">Triangle</button>
-            <button class="btn" onclick="setCurrShape('rect')">Rect</button>
-            <button class="btn" onclick="setCurrShape('line')">Line</button>
-            <button class="btn" onclick="setCurrShape('fan')">fan</button>
-            <button class="btn" onclick="setCurrShape('dna')">DNA</button>
-            <button class="btn" onclick="setCurrShape('circle')">circle</button>
-            <input class="text-to-draw" onkeyup="reRenderMemeIMG(this)" " placeholder="text to add " type="text ">
-            <button onclick="clearCanvas() ">Clear</button>
-            <button onclick="addLine() ">Add Line</button>
-            <button onclick="switchLine() ">Next Line</button>
-            <button onclick="switchAlign( 'Left') ">Align Left</button>
-            <button onclick="switchAlign( 'center') ">Align center</button>
-            <button onclick="switchAlign( 'right') ">Align right</button>
-            <button onmousedown="moveLine( 'up') ">move up</button>
-            <button onmousedown="moveLine( 'down') ">move down</button>
-            <button onmousedown="moveLine( 'left') ">move left</button>
-            <button onmousedown="moveLine( 'right') ">move right</button>
-            <button onmousedown="deleteCurrLine( ) ">DELETE</button>
-            <button onmousedown="fontSizeChange( -2) ">font -</button>
-            <button onmousedown="fontSizeChange( 2) ">font +</button>
-            <a href="# " onclick="drawImg(this) " download=" ">img upload</a>
-            <a href="# " onclick="downloadCanvas(this) " download=" ">Download</a>
-
-        </div>
-
-
-</div>
 
 
     <script src="js/service.js "></script>
